tests/error/linear_errors/mutable_empty_struct2.err
Error: Copy violation (at $FILE:14:11)
   | 
12 |     if b:
13 |         t = s  # Empty mutable structs are stiff affine
14 |     return s
   |            ^ Variable `s` with non-copyable type `MyStruct` cannot be
   |              returned ...

Note:
   | 
12 |     if b:
13 |         t = s  # Empty mutable structs are stiff affine
   |             - Variable `s` already moved here

Guppy compilation failed due to 1 previous error
